@@ -1,3 +1,7 @@
+22-05-2004 :
+ - wxbUtils : Created this class, containing general functions like
+    WaitForEnd
+
 21-05-2004 :
  - wxbRestorePanel : Added functions to get/set working status
 
